gitops/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-api
  name: backend-api
  namespace: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  strategy: {}
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - image: dominikjaro/fastapi:v1.0.0
        name: backend-api
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits: 
            memory: "256Mi"
            cpu: "1000m"
