gitops/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi
  name: fastapi-service
  namespace: fastapi
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fastapi
  type: ClusterIP
